# rizz-ui

./: README.md  app.py  config.toml  pyproject.toml  requirements.txt
src/: 🏠_Home.py
src/pages/: 1_🔐_Login.py  2_🛍️_Brands.py  3_💁🏽‍♀️_About_Us.py
src/utils/: currency.py  products.py  url.py
